syntax = "proto3";

package chat;

option java_multiple_files = true;
option java_package = "if4031.grpc.chat";
option java_outer_classname = "ChatProto";

service Chat {
  rpc login (ChatRequest) returns (ChatResponse) {}
  rpc join (ChatRequest) returns (ChatResponse) {}
  rpc leave (ChatRequest) returns (ChatResponse) {}
  rpc logout (ChatRequest) returns (ChatResponse) {}
  rpc sendMessageToChannel (ChatRequest) returns (ChatResponse) {}
  rpc broadcastMessage (ChatRequest) returns (ChatResponse) {}
  rpc fetchMessages (ChatRequest) returns (FetchMessagesResponse) {}
}

message ChatRequest {
  string nickname = 1;
  string channelName = 2;
  string message = 3;
  int64 timestamp = 4;
  repeated string param = 5;
}

message ChatResponse {
  bool status = 1;
  string message = 2;
  repeated string values = 3;
}

message FetchMessagesResponse {
  bool status = 1;
  message Message {
    string sender = 1;
    string text = 2;
    int64 timestamp = 3;
  }
  repeated Message messages = 2;
  string message = 3;
}

